# ChangeLog for games-action/armagetronad
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-action/armagetronad/Attic/ChangeLog,v 1.14 2009/06/08 17:07:30 mr_bones_ Exp $

  08 Jun 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +files/armagetronad-0.2.7.1-build.patch, armagetronad-0.2.7.1-r1.ebuild:
  make it build with patch from Martin Väth via bug #272961

  29 Jun 2008; Torsten Veller <tove@gentoo.org>
  armagetronad-0.2.7.1-r1.ebuild:
  Add missing die: || "..." -> || die "..."

  10 May 2008; Mike Frysinger <vapier@gentoo.org>
  +files/armagetronad-0.2.7.1-gcc43.patch, armagetronad-0.2.7.1-r1.ebuild:
  Add fix by Martin Väth for building with gcc-4.3 #218542.

  30 Oct 2006; Mike Frysinger <vapier@gentoo.org> files/armagetronad,
  files/armagetronad-ded, armagetronad-0.2.7.1-r1.ebuild:
  Make the wrapper scripts less sucky #153338 by Richard Freeman.

  28 Oct 2006; <tupone@gentoo.org> files/armagetronad-ded,
  -armagetronad-0.2.7.1.ebuild, armagetronad-0.2.7.1-r1.ebuild:
  Fixing armagetronad dedicated. Bug #119351 by Matthew Gleed

  08 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  armagetronad-0.2.7.1-r1.ebuild:
  ppc stable, bug #142394

*armagetronad-0.2.7.1-r1 (06 Sep 2006)

  06 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  +files/armagetronad-0.2.7.1-gcc4.patch,
  +files/armagetronad-0.2.7.1-security-1.patch,
  +armagetronad-0.2.7.1-r1.ebuild:
  Revision bump with a GCC patch and a security patch. Closing bug #142394 and
  bug #135154.

  10 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  armagetronad-0.2.7.1.ebuild:
  Added patch to resolve bug #121473.

  06 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  armagetronad-0.2.7.1.ebuild:
  Fixing dependencies and closing bug #121741.

  22 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  armagetronad-0.2.7.1.ebuild:
  Added modular X dependencies and closing bug #119943.

  19 Jun 2005; Simon Stelling <blubb@gentoo.org>