@@ -5,8 +5,10 @@ AUX armagetronad-0.2.7.1-gcc43.patch 8497 RMD160 abe52bdeb47f4a235d1d44ada3d1c70
 AUX armagetronad-0.2.7.1-security-1.patch 527 RMD160 c9e68014c8a1fc1aaf06aacbcac8521007996932 SHA1 0029073a50655e6f87935732de186ced9d4db16e SHA256 b813bb1e74188e200217fa31f075c90ff625d8e9d2f073d8a6ced120af228cd0
 AUX armagetronad-ded 905 RMD160 035ea8726e699270e0cfd362ddced5b2b6bff384 SHA1 fe6e2899d63874b6a7740c295dd83a08fd2e8cfa SHA256 e1bfc2fdd5edaaa64f161c8be8aa68abf1d83b02f48701fb82777da1cf0f163c
 DIST armagetronad-0.2.7.1.tar.bz2 1243746 RMD160 0dcf9d383fccd42509cae3aacc2df0d5531bd021 SHA1 a93d587e1154f0465c6fdb3c5518a5003add6240 SHA256 0ec8793f6d4d4f5a90feec1c8b0a4846aa4fa2c1f3c69a20b21b5e930d70992c
+DIST armagetronad-0.2.8.3.1.src.tar.bz2 1849966 RMD160 0685332fd4b2482d0c4e5178c112f36aa71e90fb SHA1 1be6e075b71a3a3c5ef7ced50785472374364224 SHA256 17ebb23c5e785baa3bae4a1c5373872df9aa89d22c121066e98267f4af4685ca
 DIST moviepack.zip 352253 RMD160 07c8b2aa48ad84092869c90e32d32a96d367afd5 SHA1 2dfe328f325add441a74c79685806d16fddce2c6 SHA256 3de835e1e8af71f1dcbf5ac8405dfa87973eac50d206c12338278fc601cf9d78
 DIST moviesounds_fq.zip 2182021 RMD160 9fe95f3cc31bfdf9149bf850d5ae46ca5253a09a SHA1 357d87ef40e25bec19fdc8a3aac70db53d3820ec SHA256 9f8061eb0fef416885424bdba9f899fc5b4d9a021f46eef4eb821a7f1e08c1ba
 EBUILD armagetronad-0.2.7.1-r1.ebuild 2394 RMD160 7c2843638d6a19644e6dc5c69f25fcdfaabe4f3e SHA1 5b5bb0d28dda4c9bc2aa8a641cedf9b914c05b8a SHA256 911acfb7213a41a8f9af6864feb685981703fbdd34c6d991081f24ac7afa696a
-MISC ChangeLog 2383 RMD160 ec1da216802446854f1b3edfa8aa2722174678b0 SHA1 bdf359e1d060eec3ffb4cef80567a1a94179d5b5 SHA256 327d99979ac2fe878da01fc8813ac9e8c44f47eaec977cb8f8df447d31365eaf
+EBUILD armagetronad-0.2.8.3.1.ebuild 2060 RMD160 55b2b419bcaf0540dfc9666345661ede262c7c82 SHA1 40e2b1da3023d39aca11ac3434a72b0d116bdbed SHA256 a1a56309dcdda1a4bd1b184f6a1bf46d7c0382486e7f3f9e37759acc3d5a598f
+MISC ChangeLog 2527 RMD160 8d13e1642006ce2085df42062dac007587cff41a SHA1 aad6236b633e7bb350d99ebb8f520d08a8e74486 SHA256 1f778e5635354b40c9c60fcb1a3070e9cc3a14da3d564bab2fc8fbd6b967a37c
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
