@@ -1,6 +1,12 @@
 # ChangeLog for games-action/armagetronad
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/armagetronad/Attic/ChangeLog,v 1.14 2009/06/08 17:07:30 mr_bones_ Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-action/armagetronad/Attic/ChangeLog,v 1.15 2010/03/19 18:40:42 ssuominen Exp $
+
+*armagetronad-0.2.8.3.1 (19 Mar 2010)
+
+  19 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
+  +armagetronad-0.2.8.3.1.ebuild:
+  Version bump.
 
   08 Jun 2009; Michael Sterrett <mr_bones_@gentoo.org>
   +files/armagetronad-0.2.7.1-build.patch, armagetronad-0.2.7.1-r1.ebuild:
